Remove about page

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Imanel's Blog
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+description: ''
 
 logo: false
 paginate: 10
