--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: /
 domain_name: 'https://blog.imanel.org'
 permalink: pretty
 
-google_analytics: 'UA-XXXXXXXX-X'
+# google_analytics: 'UA-XXXXXXXX-X'
 plugins:
   - jekyll-feed
   - jekyll-pagination
@@ -17,5 +17,10 @@ plugins:
 
 # Details for the RSS feed generator
 url: ''
-author: 'Bernard Potocki'
-gravatar: '00c5bb4f96b1094aec27674a810caae6'
+
+author:
+  name: Bernard Potocki
+  bio: Here goes the author description. You might want to place some links too in here.
+  picture: https://gravatar.com/avatar/00c5bb4f96b1094aec27674a810caae6.jpeg
+  linkedin: bernardpotocki
+  twitter: _imanel
