--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: ''
 
 logo: false
 paginate: 10
+url: https://blog.imanel.org
 baseurl: /
 domain_name: 'https://blog.imanel.org'
 permalink: pretty
