Github have some serious problems with url config...

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: ''
 
 logo: false
 paginate: 10
+domain_name: https://blog.imanel.org
 url: https://blog.imanel.org
 baseurl: /
 permalink: pretty
